@@ -9,6 +9,7 @@ Version 1.0.2 to be released
 - Bug #87: yiic gives an error when using yiilite.php in the main application (Qiang)
 - Bug: CDbAuthManager::saveAuthAssignment() causes updating all rows (Qiang)
 - Bug: Fixed an issue in CUrlManager::createUrl when GET parameters contain arrays (Qiang)
+- New #88: Added public properties to CActiveRecord::safeAttributes() (Qiang)
 - New: Added CActiveRecord::getRelated() (Qiang)
 - New: Added 'return' option to HTML options in CHtml (Qiang)
 - New: Refactored CSS-dependent widgets by adding registerCssFile static methods (Qiang)
